--- a/NewsDB/src/frames/PartnerNewsFrame.form
+++ b/NewsDB/src/frames/PartnerNewsFrame.form
@@ -105,6 +105,11 @@
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/res/img/ok_standart.png"/>
+        </Property>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
