--- a/NewsDB/src/frames/SelectOpenNewsFrame.form
+++ b/NewsDB/src/frames/SelectOpenNewsFrame.form
@@ -321,6 +321,11 @@
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/res/img/ok_standart.png"/>
+        </Property>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
