--- a/NewsDB/src/frames/SelectOpenAutorsFrame.form
+++ b/NewsDB/src/frames/SelectOpenAutorsFrame.form
@@ -31,9 +31,9 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="chisloComboBox" min="-2" pref="72" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="monthComboBox2" min="-2" pref="72" max="-2" attributes="0"/>
+                      <Component id="monthComboBox2" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="ricComboBox" max="32767" attributes="0"/>
+                      <Component id="ricComboBox" min="-2" pref="110" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jButton1" alignment="1" max="32767" attributes="0"/>
                   <Component id="jScrollPane2" alignment="0" max="32767" attributes="0"/>
